Updated to use the new framework, cleaned up headers

--- a/App/ThatInbox-Info.plist
+++ b/App/ThatInbox-Info.plist
@@ -45,6 +45,14 @@
 				<string>thatinbox</string>
 			</array>
 		</dict>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>ink-AwCJXBinboxlxzkfuJyz</string>
+			</array>
+		</dict>
 	</array>
 	<key>CFBundleVersion</key>
 	<string>0.1.0</string>
